# mtrx3760_2025

LabExampleSolutions/Lab1/A1.CruftyCode/: birds.cpp  bounce.cpp  car.cpp  donut.cpp  snake.cpp  stars.cpp
LabExampleSolutions/Lab1/A2.RobotMaze/: A2.RobotMaze.cpp
LabExampleSolutions/Lab2/A2.Shapes/: A2.Shapes.cpp  A2.Shapes.started.inlecture.cpp
LabExampleSolutions/Lab3/A1.Simulator/: A1.LogicSimPoly.ExampleCode.cpp
LectureExamples/10B_InheritanceInNodeLive/: ExampleSensor.cpp  FireSensorProblemStatement.txt  SensorNodeStartingLive.cpp  SensorNodeStartingLiveSeparated.cpp  SensorNodeStartingPoint.cpp
LectureExamples/4A_LiveCodedDirectory/: DirectoryCompare.cpp
LectureExamples/7B_LiveCodedRaylib/: circle.c  circle.cpp  gpt_try.cpp
LectureExamples/ROS_LectureExamplePackage/: CMakeLists.txt
LectureExamples/ROS_LectureExamplePackage/src/: april_tag_detection.cpp  colour_detection.cpp  decorator.cpp  factory.cpp  simple_camera_display.cpp
TurtlebotExample/include/turtlebot_example/: minimalNode.hpp
TurtlebotExample/src/: minimalNode.cpp
